--- a/templates/kube-apiserver-server-csr.j2
+++ b/templates/kube-apiserver-server-csr.j2
@@ -7,7 +7,8 @@
     "kubernetes.default.svc",
     "kubernetes.default.svc.cluster.local",
     "*.{{ domain }}",
-    "{{hostvars[groups['masters'][0]]['ansible_hostname']}}"
+    "{{ hostvars[groups['masters'][0]]['ansible_hostname'] }}",
+    "{{ hostvars[groups['masters'][0]]['ansible_eno16780032']['ipv4']['address'] }}"
   ],
   "key": {
     "algo": "rsa",
