--- a/templates/kube-scheduler.j2
+++ b/templates/kube-scheduler.j2
@@ -14,16 +14,7 @@ spec:
     - --address=127.0.0.1
     - --leader-elect=true
     - --kubeconfig=/etc/kubernetes/scheduler.conf
-    env:
-    - name: http_proxy
-      value: http://webproxy-utvikler.nav.no:8088
-    - name: https_proxy
-      value: http://webproxy-utvikler.nav.no:8088
-    - name: HTTPS_PROXY
-      value: http://webproxy-utvikler.nav.no:8088
-    - name: no_proxy
-      value: localhost,127.0.0.1,.local,.adeo.no,preprod.local,test.local,.nav.no,.devillo.no,.oera.no,oera-q.local,oera-t.local,{{ansible_default_ipv4.address}},10.254.0.1
-    image: gcr.io/google_containers/kube-scheduler-amd64:v1.6.3
+    image: gcr.io/google_containers/kube-scheduler-amd64:v{{ k8s_version }}
     livenessProbe:
       failureThreshold: 8
       httpGet:
