--- a/templates/kube-apiserver.j2
+++ b/templates/kube-apiserver.j2
@@ -38,7 +38,7 @@ spec:
       value: http://webproxy-utvikler.nav.no:8088
     - name: no_proxy
       value: localhost,127.0.0.1,.local,.adeo.no,preprod.local,test.local,.nav.no,.devillo.no,.oera.no,oera-q.local,oera-t.local,{{ansible_default_ipv4.address}}
-    image: gcr.io/google_containers/kube-apiserver-amd64:v1.6.3
+    image: gcr.io/google_containers/kube-apiserver-amd64:v{{ k8s_version }}
     livenessProbe:
       failureThreshold: 8
       httpGet:
