fixed keypair issue, removed legacy declarations, fixed docker-flannel setup

--- a/templates/worker-kubelet.service.j2
+++ b/templates/worker-kubelet.service.j2
@@ -3,7 +3,7 @@ Description=kubelet: The Kubernetes Node Agent
 Documentation=http://kubernetes.io/docs/
 
 [Service]
-ExecStart=/usr/bin/kubelet --api-servers=https://{{ master_ip }}:6443 --kubeconfig=/etc/kubernetes/kubelet.conf
+ExecStart=/usr/bin/kubelet --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf
 
 Restart=always
 StartLimitInterval=0
