--- a/templates/worker-kubelet.service.j2
+++ b/templates/worker-kubelet.service.j2
@@ -3,7 +3,7 @@ Description=kubelet: The Kubernetes Node Agent
 Documentation=http://kubernetes.io/docs/
 
 [Service]
-ExecStart=/usr/bin/kubelet --api-servers=https://{{ master_ip }}:6443 --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf
+ExecStart=/usr/bin/kubelet --api-servers=https://{{ master_ip }}:6443 --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf --cni-conf-dir=/etc/kubernetes/cni/net.d
 
 Restart=always
 StartLimitInterval=0
