fixed docker flannel service configuration dependency

--- a/templates/flannel.service.j2
+++ b/templates/flannel.service.j2
@@ -1,10 +1,11 @@
 [Unit]
 Description=flannel
 Documentation=https://coreos.com/flannel
+Before=docker.service
 
 [Service]
 ExecStart=/usr/bin/flanneld -etcd-endpoints=http://{{ master_ip }}:2379 -etcd-prefix=/nais/network
-ExecStartPost=/usr/libexec/mk-docker-opts.sh -d /run/docker_opts.env
+ExecStartPost=/usr/libexec/mk-docker-opts.sh -k DOCKER_OPTS -f /run/flannel/subnet.env -d /run/docker_opts.env
 
 Restart=always
 StartLimitInterval=0
