--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -60,8 +60,8 @@ spec:
         k8s-app: traefik-ingress-lb
         name: traefik-ingress-lb
       annotations:
-        prometheus.io/scrape: true
-        prometheus.io/port: 8080
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
     spec:
       nodeSelector:
         nais.io/type: worker
