--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -78,6 +78,7 @@ spec:
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
+        nais.io/logformat: accesslog_with_processing_time
     spec:
       serviceAccountName: coredns
       containers:
