disable automatic check for updates

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -86,6 +86,7 @@ spec:
         - --kubernetes
         - --web.metrics
         - --web.metrics.prometheus
+        - --checknewversion=false
 ---
 apiVersion: v1
 kind: Service
