--- a/templates/docker-proxy.conf.j2
+++ b/templates/docker-proxy.conf.j2
@@ -1,2 +1,2 @@
 [Service]
-Environment="HTTP_PROXY=http://webproxy-utvikler.nav.no:8088/" "HTTPS_PROXY=http://webproxy-utvikler.nav.no:8088/" "NO_PROXY=localhost,127.0.0.1,.local,.adeo.no,preprod.local,test.local,.nav.no,.devillo.no,.oera.no,oera-q.local,oera-t.local,{{ ansible_default_ipv4.address }}"
+Environment="HTTP_PROXY={{ proxy_env.http_proxy }}" "HTTPS_PROXY={{ proxy_env.https_proxy }}" "NO_PROXY={{ proxy_env.no_proxy }}"
