--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -67,9 +67,22 @@ spec:
         nais.io/type: worker
       serviceAccountName: traefik-ingress-controller
       terminationGracePeriodSeconds: 60
+      volumes:
+        - name: config
+          configMap:
+            name: traefik-conf
+        - name: traefik-tls
+          secret:
+            secretName: traefik
+                            
       containers:
       - image: traefik:{{ traefik_version }}
         name: traefik-ingress-lb
+        volumeMounts:
+          - mountPath: /config
+            name: config
+          - mountPath: /var/run/secrets/nais.io
+            name: traefik-tls
         resources:
           limits:
             cpu: 200m
@@ -78,10 +91,11 @@ spec:
             cpu: 100m
             memory: 20Mi
         ports:
-        - containerPort: 80
-          hostPort: 80
+        - containerPort: 443
+          hostPort: 443
         - containerPort: 8080
         args:
+        - --configfile=/config/traefik.toml
         - --web
         - --kubernetes
         - --web.metrics
@@ -113,3 +127,18 @@ spec:
           serviceName: traefik-web-ui
           servicePort: 80
 
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: traefik-conf
+  namespace: kube-system
+data:
+  traefik.toml: |
+    [entryPoints]
+      [entryPoints.https]
+      address = ":443"
+        [entryPoints.https.tls]
+          [[entryPoints.https.tls.certificates]]
+          CertFile = "/var/run/secrets/nais.io/tls.crt"
+          KeyFile = "/var/run/secrets/nais.io/tls.key"
