--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -1,3 +1,7 @@
+{% set etcd_urls = [] -%}
+{% for host in groups['etcd'] -%}
+  {% set _ = etcd_urls.append("http://%s:2379" % (host)) -%}
+{% endfor -%}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -28,7 +32,7 @@ spec:
     - --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
     - --authorization-mode=RBAC
     - --advertise-address={{ansible_default_ipv4.address}}
-    - --etcd-servers=http://127.0.0.1:2379
+    - --etcd-servers={{ etcd_urls | join(",") }}
     image: gcr.io/google_containers/kube-apiserver-amd64:v{{ k8s_version }}
     livenessProbe:
       failureThreshold: 8
