--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -27,10 +27,12 @@ spec:
     - --insecure-bind-address=127.0.0.1
     - --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
     - --authorization-mode=RBAC
-    - --oidc-issuer-url={{oidc_issuer_url}}
-    - --oidc-client-id={{oidc_client_id}}
-    - --oidc-username-claim={{oidc_username_claim}}
-    - --oidc-groups-claim={{oidc_groups_claim}}
+    {% if oidc_issuer_url is defined %}
+      - --oidc-issuer-url={{oidc_issuer_url}}
+      - --oidc-client-id={{oidc_client_id}}
+      - --oidc-username-claim={{oidc_username_claim}}
+      - --oidc-groups-claim={{oidc_groups_claim}}
+    {% endif %}
     - --advertise-address={{ansible_default_ipv4.address}}
     - --etcd-servers=http://127.0.0.1:2379
     image: gcr.io/google_containers/kube-apiserver-amd64:v{{ k8s_version }}
