--- a/templates/manifests/kube-scheduler.yaml.j2
+++ b/templates/manifests/kube-scheduler.yaml.j2
@@ -16,7 +16,7 @@ spec:
     - --address=127.0.0.1
     - --leader-elect=true
     - --kubeconfig=/etc/kubernetes/kubeconfigs/kube-scheduler.conf
-    - --v={{log_level | default(0)i }}
+    - --v={{log_level | default(0) }}
     image: gcr.io/google_containers/kube-scheduler-amd64:v{{ k8s_version }}
     livenessProbe:
       failureThreshold: 8
