added aura role and adjusted rolebindings

--- a/templates/roles/rolebindings.yaml.j2
+++ b/templates/roles/rolebindings.yaml.j2
@@ -1,4 +1,5 @@
 ---
+# aura group
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -10,12 +11,30 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: nais-admin
+  name: cluster-admin
+subjects:
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: 0bfe4aa2-fdab-4ce3-822d-1088d51812e6
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  annotations:
+    rbac.authorization.kubernetes.io/autoupdate: "true"
+  labels:
+    kubernetes.io/bootstrapping: rbac-defaults
+  name: nais-developer-old-kubeconfig
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: nais-developer
 subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
   name: nais-admin
 ---
+# group with everyone
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
