Let heapster use hostnetwork.
We use http_proxy within the api pod.
Both the dashboard and the hpa controller uses the API servers proxy mechanism to
scrape heapster. Since the api server proxies to the cluster ip of heapster(which is not static),
we need heapster to be assigned to a known IP.

--- a/templates/addons/heapster.yaml.j2
+++ b/templates/addons/heapster.yaml.j2
@@ -120,6 +120,8 @@ spec:
         nais.io/logformat: glog
     spec:
       serviceAccountName: heapster
+      dnsPolicy: ClusterFirstWithHostNet
+      hostNetwork: true
       containers:
       - name: heapster
         image: gcr.io/google_containers/heapster-amd64:v{{ heapster_version }}
@@ -128,6 +130,7 @@ spec:
         - /heapster
         - --source=kubernetes:https://kubernetes.default
         - --sink=influxdb:http://monitoring-influxdb.kube-system.svc:8086
+      
 ---
 apiVersion: v1
 kind: Service
