--- a/templates/roles/rolebindings.yaml.j2
+++ b/templates/roles/rolebindings.yaml.j2
@@ -17,7 +17,7 @@ subjects:
   kind: Group
   name: df17de8a-e293-4253-96f3-46544e57cc5a
 ---
-# group with everyone
+# groups with everyone
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -30,3 +30,6 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
   name: 55465c5b-55a7-4e99-86b1-4c94818c1573
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: ff7122a0-99b0-4126-92d6-b80214b3b0ec
