--- a/templates/addons/kubernetes-dashboard.yaml.j2
+++ b/templates/addons/kubernetes-dashboard.yaml.j2
@@ -15,7 +15,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: view
 subjects:
 - kind: ServiceAccount
   name: kubernetes-dashboard
