Add http entrypoint.

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -54,6 +54,7 @@ data:
     format = "json"
     [entryPoints]
       [entryPoints.http]
+      address = ":80"
       trustForwardHeader = true
 ---
 kind: DaemonSet
