Forward headers from big ip. Try 2.

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -56,7 +56,8 @@ data:
     [entryPoints]
       [entryPoints.http]
       address = ":80"
-      trustForwardHeader = true
+      [entryPoints.http.forwardedHeaders]
+      trustedIPs = []
 ---
 kind: DaemonSet
 apiVersion: extensions/v1beta1
