Revert "Forward headers from big ip. Try 2."
This reverts commit 301b85a8f708aba7f0389c685e0f571abe1b455c.

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -56,8 +56,7 @@ data:
     [entryPoints]
       [entryPoints.http]
       address = ":80"
-      [entryPoints.http.forwardedHeaders]
-      trustedIPs = []
+      trustForwardHeader = true
 ---
 kind: DaemonSet
 apiVersion: extensions/v1beta1
