added 28-GO-NAV to nais-developer

--- a/templates/roles/rolebindings.yaml.j2
+++ b/templates/roles/rolebindings.yaml.j2
@@ -33,3 +33,6 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
   name: ff7122a0-99b0-4126-92d6-b80214b3b0ec
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: 99f15c1b-cc3a-4f17-b1e6-c4b4a25118fc
