changing selector for webhook

--- a/templates/istio/istio-sidecar-injector.yaml.j2
+++ b/templates/istio/istio-sidecar-injector.yaml.j2
@@ -88,5 +88,5 @@ webhooks:
         resources: ["pods"]
     namespaceSelector:
       matchLabels:
-        istio-injection: enabled
+        istio-injection: !disabled
 ---
