--- a/templates/master-kubelet.service.j2
+++ b/templates/master-kubelet.service.j2
@@ -3,6 +3,7 @@ Description=kubelet: The Kubernetes Node Agent
 Documentation=http://kubernetes.io/docs/
 
 [Service]
+Environment=HOME=/root
 ExecStart=/usr/bin/kubelet --hostname-override {{ inventory_hostname }} --node-labels=nais.io/type=master --allow-privileged=true --image-pull-progress-deadline=10m --pod-manifest-path=/etc/kubernetes/manifests --v={{log_level | default(2) }} --register-with-taints=node.alpha.kubernetes.io/ismaster=:NoSchedule --require-kubeconfig --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf --runtime-cgroups=/systemd/system.slice --kubelet-cgroups=/systemd/system.slice
 
 Restart=always
