--- a/templates/worker-kubelet.service.j2
+++ b/templates/worker-kubelet.service.j2
@@ -3,6 +3,7 @@ Description=kubelet: The Kubernetes Node Agent
 Documentation=http://kubernetes.io/docs/
 
 [Service]
+Environment=HOME=/root
 ExecStart=/usr/bin/kubelet --hostname-override {{ inventory_hostname }} --node-labels=nais.io/type=worker --cluster-dns={{ cluster_dns_ip }} --cluster-domain={{ cluster_domain }} --image-pull-progress-deadline=10m --anonymous-auth=false --client-ca-file=/etc/kubernetes/pki/ca.pem --require-kubeconfig --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf --runtime-cgroups=/systemd/system.slice --kubelet-cgroups=/systemd/system.slice --allow-privileged=true --v={{ log_level | default(0) }}
 
 Restart=always
