--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -50,7 +50,9 @@ data:
         errors
         log . "{remote} - [{when}] \"{type} {class} {name} {proto} {size} {>do} {>bufsize}\" {rcode} {rsize} {duration}"
         health
-        kubernetes {{ cluster_domain }} {{ service_cidr }}
+        kubernetes {{ cluster_domain }} {{ service_cidr }} {
+            upstream /etc/resolv.conf
+        }
         proxy . /etc/resolv.conf
         cache 30
         prometheus 0.0.0.0:9153
