added default tcp ports

--- a/templates/istio/egress-domains.yaml.j2
+++ b/templates/istio/egress-domains.yaml.j2
@@ -8,3 +8,32 @@ spec:
   ports:
     - port: 443
       protocol: https
+    - port: 8443
+      protocol: https
+    - port: 9443
+      protocol: https
+    - port: 1521 # oracle
+      protocol: tcp
+    - port: 389 # ldap
+      protocol: tcp
+    - port: 636 # ldap
+      protocol: tcp
+    - port: 25 # smtp
+      protocol: tcp
+    - port: 27018 # mongo
+      protocol: tcp
+    - port: 27017 # mongo
+      protocol: tcp
+    - port: 6379 # redis
+      protocol: tcp
+    - port: 1410 # mq
+      protocol: tcp
+    - port: 1411 # mq
+      protocol: tcp
+    - port: 1412 # mq
+      protocol: tcp
+    - port: 1413 # mq
+      protocol: tcp
+    - port: 1414 # mq
+      protocol: tcp
+
