--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -78,6 +78,8 @@ spec:
   selector:
     matchLabels:
       k8s-app: traefik-ingress-lb
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
