removed ip from list of ipsan/hosts
to make it easier to switch hosts we should use a name instead of ip
to talk with the apiserver

--- a/templates/kube-apiserver-server-csr.j2
+++ b/templates/kube-apiserver-server-csr.j2
@@ -8,8 +8,7 @@
     "kubernetes.default.svc",
     "kubernetes.default.svc.{{ cluster_domain }}",
     "*.{{ domain }}",
-    "{{ hostvars[groups['masters'][0]]['ansible_hostname'] }}",
-    "{{ master_ip }}"
+    "{{ groups['masters'][0] }}"
   ],
   "key": {
     "algo": "rsa",
