--- a/templates/kubeconfigs/kube-proxy.conf.j2
+++ b/templates/kubeconfigs/kube-proxy.conf.j2
@@ -3,7 +3,7 @@ kind: Config
 clusters:
 - cluster:
     certificate-authority: /etc/kubernetes/pki/ca.pem
-    server: https://{{ master_ip }}:6443
+    server: https://{{ groups['masters'][0] }}:6443
   name: kubernetes
 contexts:
 - context:
