--- a/templates/kubeconfigs/kube-controller-manager.conf.j2
+++ b/templates/kubeconfigs/kube-controller-manager.conf.j2
@@ -3,7 +3,7 @@ kind: Config
 clusters:
 - cluster:
     certificate-authority: /etc/kubernetes/pki/ca.pem
-    server: https://{{ ansible_default_ipv4.address }}:6443
+    server: https://{{ inventory_hostname }}:6443
   name: kubernetes
 contexts:
 - context:
