Add ping to https endpoint.

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -66,6 +66,8 @@ data:
           [[entryPoints.https.tls.certificates]]
           CertFile = "/tls/tls.crt"
           KeyFile = "/tls/tls.key"
+    [ping]
+    entrypoint= "https"
 ---
 kind: DaemonSet
 apiVersion: extensions/v1beta1
