Add access log to traefik config.
Start with default json logging.

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -54,6 +54,9 @@ data:
 
     [traefikLog]
     format = "json"
+    
+    [accessLog]
+    format = "json"
 
     [entryPoints]
       [entryPoints.http]
