export traefik internal metrics through prometheus.

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -55,6 +55,9 @@ data:
     [traefikLog]
     format = "json"
     
+    [metrics]
+      [metrics.prometheus]
+
     [accessLog]
     format = "json"
 
