Modify templates so that Kubernetes v1.11.0 starts up
Includes the following changes:

* Remove unused references to CNI version
* Do not specify CA certificate to API server startup
* Add `priorityClassName: system-cluster-critical` to Kubernetes pods
* Add `scheduler.alpha.kubernetes.io/critical-pod: ""` annotation to Kubernetes pods

--- a/templates/manifests/kube-controller-manager.yaml.j2
+++ b/templates/manifests/kube-controller-manager.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     tier: control-plane
   annotations:
     nais.io/logformat: glog
+    scheduler.alpha.kubernetes.io/critical-pod: ""
   name: kube-controller-manager
   namespace: kube-system
 spec:
@@ -48,6 +49,7 @@ spec:
     - mountPath: /etc/pki
       name: pki
   hostNetwork: true
+  priorityClassName: system-cluster-critical
   volumes:
   - hostPath:
       path: /etc/kubernetes
