--- a/templates/manifests/kube-scheduler.yaml.j2
+++ b/templates/manifests/kube-scheduler.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     tier: control-plane
   annotations:
     nais.io/logformat: glog
+    scheduler.alpha.kubernetes.io/critical-pod: ""
   name: kube-scheduler
   namespace: kube-system
 spec:
@@ -36,6 +37,7 @@ spec:
       name: k8s
       readOnly: true
   hostNetwork: true
+  priorityClassName: system-cluster-critical
   volumes:
   - hostPath:
       path: /etc/kubernetes
