--- a/templates/roles/k8s-dashboardroles.yaml.j2
+++ b/templates/roles/k8s-dashboardroles.yaml.j2
@@ -45,11 +45,11 @@ metadata:
   namespace: k8s-dashboard
 
 ---
-kind: Role
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: kubernetes-dashboard-minimal
-  namespace: k8s-dashboard
+  namespace: kube-system
 rules:
   # Allow Dashboard to create 'kubernetes-dashboard-key-holder' secret.
 - apiGroups: [""]
@@ -81,13 +81,13 @@ rules:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: kubernetes-dashboard-minimal
-  namespace: k8s-dashboard
+  namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: kubernetes-dashboard-minimal
 subjects:
 - kind: ServiceAccount
