kubernetes-dashboard SA trenger samme tilgang som vanlig utvikler

--- a/templates/roles/clusterrolebindings.yaml.j2
+++ b/templates/roles/clusterrolebindings.yaml.j2
@@ -36,3 +36,6 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
   name: 99f15c1b-cc3a-4f17-b1e6-c4b4a25118fc
+  kind: ServiceAccount
+  name: kubernetes-dashboard
+  namespace: kubernetes-dashboard
