--- a/templates/roles/clusterroles.yaml.j2
+++ b/templates/roles/clusterroles.yaml.j2
@@ -14,6 +14,7 @@ rules:
   - endpoints
   - persistentvolumeclaims
   - pods
+  - redisfailover
   - replicationcontrollers
   - replicationcontrollers/scale
   - serviceaccounts
