--- a/roles/etcd/templates/etcd.service.j2
+++ b/roles/etcd/templates/etcd.service.j2
@@ -13,12 +13,14 @@ Documentation=https://coreos.com/etcd/
 [Service]
 ExecStart={{ install_dir }}/bin/etcd --name {{ ansible_hostname }} --initial-advertise-peer-urls http://{{ local_ip }}:2380 \
   --listen-peer-urls http://{{ local_ip }}:2380 \
-  --listen-client-urls http://{{ local_ip }}:2379,http://127.0.0.1:2379 \
-  --advertise-client-urls http://{{ local_ip }}:2379 \
+  --listen-client-urls https://{{ local_ip }}:2379,https://127.0.0.1:2379 \
+  --advertise-client-urls https://{{ local_ip }}:2379 \
   --initial-cluster-token {{ cluster_name }}-etcd \
   --initial-cluster {{all_etcd|join(',')}} \
   --initial-cluster-state new \
-  --data-dir=/var/lib/etcd
+  --data-dir=/var/lib/etcd \
+  --cert-file=/etc/etcd/certs/etcd.pem \
+  --key-file=/etc/etcd/certs/etcd-key.pem
 Type=notify
 Restart=always
 StartLimitInterval=0
