Trenger et array, og join for å lage korrekt yaml

--- a/roles/create_certificates/templates/etcd-csr.j2
+++ b/roles/create_certificates/templates/etcd-csr.j2
@@ -1,10 +1,12 @@
+{% set all_etcd = [] -%}
+{% for host in groups['etcd'] -%}
+  {% set _ = all_etcd.append("\"%s\"" % (hostvars[host]['ansible_default_ipv4']['address'])) -%}
+{% endfor -%}
 {
   "CN": "etcd",
   "hosts": [
     "127.0.0.1",
-{% for host in groups['etcd'] -%}
-   "{{ hostvars[host]['ansible_default_ipv4']['address'] }}"
-{% endfor -%}
+    {{ all_etcd|join(',\n')|indent }}
   ],
   "key": {
     "algo": "ecdsa",
