--- a/roles/etcd/templates/etcd.service.j2
+++ b/roles/etcd/templates/etcd.service.j2
@@ -3,16 +3,18 @@
 {% for host in groups['etcd'] -%}
   {% set other_ip = hostvars[host]['ansible_default_ipv4']['address'] -%}
   {% set shortname = hostvars[host]['ansible_hostname'] -%}
-  {% set _ = all_etcd.append("%s=http://%s:2380" % (shortname, other_ip)) -%}
+  {% set _ = all_etcd.append("%s=https://%s:2380" % (shortname, other_ip)) -%}
 {% endfor -%}
 
 [Unit]
 Description=etcd
 Documentation=https://coreos.com/etcd/
+After=network.target
 
 [Service]
-ExecStart={{ install_dir }}/bin/etcd --name {{ ansible_hostname }} --initial-advertise-peer-urls http://{{ local_ip }}:2380 \
-  --listen-peer-urls http://{{ local_ip }}:2380 \
+ExecStart={{ install_dir }}/bin/etcd --name {{ ansible_hostname }} \
+  --initial-advertise-peer-urls https://{{ local_ip }}:2380 \
+  --listen-peer-urls https://{{ local_ip }}:2380 \
   --listen-client-urls https://{{ local_ip }}:2379,https://127.0.0.1:2379 \
   --advertise-client-urls https://{{ local_ip }}:2379 \
   --initial-cluster-token {{ cluster_name }}-etcd \
@@ -21,8 +23,12 @@ ExecStart={{ install_dir }}/bin/etcd --name {{ ansible_hostname }} --initial-adv
   --data-dir=/var/lib/etcd \
   --client-cert-auth \
   --trusted-ca-file=/etc/etcd/certs/ca.pem \
-  --cert-file=/etc/etcd/certs/etcd.pem \
-  --key-file=/etc/etcd/certs/etcd-key.pem
+  --cert-file=/etc/etcd/certs/client.pem \
+  --key-file=/etc/etcd/certs/client-key.pem \
+  --peer-client-cert-auth \
+  --peer-trusted-ca-file=/etc/etcd/certs/ca.pem \
+  --peer-cert-file=/etc/etcd/certs/peer-{{ ansible_hostname }}.pem \
+  --peer-key-file=/etc/etcd/certs/peer-{{ ansible_hostname }}-key.pem
 Type=notify
 Restart=always
 StartLimitInterval=0
