Ressursen manglet en s på slutten

--- a/templates/roles/clusterroles.yaml.j2
+++ b/templates/roles/clusterroles.yaml.j2
@@ -14,7 +14,7 @@ rules:
   - endpoints
   - persistentvolumeclaims
   - pods
-  - redisfailover
+  - redisfailovers
   - replicationcontrollers
   - replicationcontrollers/scale
   - serviceaccounts
