--- a/roles/etcd/templates/etcd.service.j2
+++ b/roles/etcd/templates/etcd.service.j2
@@ -12,7 +12,7 @@ Documentation=https://coreos.com/etcd/
 After=network.target
 
 [Service]
-ExecStart={{ install_dir }}/bin/etcd --name {{ ansible_hostname }}
+ExecStart={{ install_dir }}/bin/etcd --name {{ ansible_hostname }} \
   --initial-advertise-peer-urls http://{{ local_ip }}:2380 \
   --listen-peer-urls http://{{ local_ip }}:2380 \
   --listen-client-urls http://{{ local_ip }}:2379,http://127.0.0.1:2379 \
